# toy-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  configure.fish  flake.nix  main.cpp  remove_git_submodule.sh
Milestone_0/: CMakeLists.txt  README.md  adder.cpp  build.sh  conanfile.txt  configure.sh  main.cpp
Milestone_0/Mult/: CMakeLists.txt
Milestone_0b/: README.md  adder.cpp  main.cpp  xmake.lua
Milestone_0b/Mult/: multiplier.cpp
Milestone_0c/: Cargo.toml
Milestone_1/: CMakeLists.txt  conanfile.txt  configure.sh  main.cpp
Milestone_1b/: README.md  main.cpp  xmake.lua
Milestone_1c/: Cargo.toml  lib.rs  main.rs
Milestone_2/: CMakeLists.txt  README.md  error.cpp  error.h  execute.sh  main.cpp  shader.cpp  shader.h
Milestone_2/shader/: fragment.fs
Milestone_3/: CMakeLists.txt  README.md  array.cpp  array.h  configure.sh  error.h  indexBuffer.cpp  indexBuffer.h  main.cpp  renderer.h  shader.cpp  shader.h  vertexArray.cpp  vertexArray.h  vertexAttribVector.cpp  vertexAttribVector.h  vertexBuffer.cpp  vertexBuffer.h
Milestone_4/: CMakeLists.txt  README.md  camera.cpp  camera.h  conanfile.txt  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  vertexAttribVector.cpp
Milestone_4/shader/: fragment.fs  vertex.vs
Milestone_5/: CMakeLists.txt  README.md  camera.cpp  camera.h  conanfile.txt  configure.sh  main.cpp
Milestone_5/model/: vertexData.h
Milestone_5/ui/: demo.cpp  menu.cpp  menu.h  stats.cpp  stats.h
Milestone_5b/: main.cpp  renderer.h  vertexBuffer.cpp  xmake.lua
Milestone_5b/model/: translationList.cpp
Milestone_6/: CMakeLists.txt  camera.cpp  conanfile.txt  error.h  logger.cpp  logger.h  main.cpp  pch.h  renderer.cpp  renderer.h  shader.cpp  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertexAttribVector.h  vertexBuffer.h
Milestone_6/src/: camera.h  pch.h  vertexAttrib.h  vertexAttribVector.cpp
Milestone_6/src/event/: appEvent.cpp  event.h  eventDispatcher.cpp  keyEvent.cpp  keyEvent.h  mouseEvent.cpp  mouseEvent.h
Milestone_6/src/ui/: stats.h
Milestone_6/ui/: demo.h  menu.cpp  menu.h  stats.cpp
Milestone_6b/: xmake.lua
Milestone_6b/src/: camera.h  error.cpp  error.h  indexBuffer.cpp  indexBuffer.h  main.cpp  renderer.h  shader.h  texture.h  vertexArray.h  vertexAttrib.h  vertexAttribVector.h  vertexBuffer.h
Milestone_6b/src/event/: appEvent.h  event.cpp  eventDispatcher.h  windowEvent.cpp
Milestone_6b/src/model/: translationList.h
Milestone_6b/src/ui/: demo.h  menu.h  stats.h
Mult/: multiplier.cpp
README_assets/: milestone2.mov  milestone3.mov  milestone4.mov
archive/Milestone_5.5/: camera.h  error.h  shader.cpp  shader.h  texture.h  xmake.lua
archive/Milestone_5.5/ui/: demo.h  menu.cpp  stats.h
archive/Milestone_6/: README.md  xmake.lua
archive/Milestone_6/src/: indexBuffer.h  logger.h  main.cpp  pch.h  shader.cpp  shader.h  vertexBuffer.cpp
archive/Milestone_6/src/event/: eventDispatcher.h  windowEvent.h
archive/Milestone_6/src/model/: translationList.h
archive/Milestone_6/src/shader/: fragment.fs
src/: error.cpp  indexBuffer.cpp  indexBuffer.h  main.cpp  vertexArray.cpp  vertexArray.h  vertexAttrib.cpp  vertexAttrib.h  vertexAttribVector.h  vertexBuffer.h
src/model/: translationList.h  vertexData.cpp
src/ui/: menu.h
